-------------------------------------
	4.2-2
-------------------------------------
Look-and-feel changes to more closely match the VirtualBox GUI

Fixed bug causing phpVirtualBox to not load in IE unless the
JavaScript console was open

Added config option to exclusively use phpVirtualBox groups rather
than VirtualBox groups - see config.php-example for more info

Fixed bug that would leave group information (vm / group counts
and icons) always visible after renaming a group

-------------------------------------
	4.2-1	2012-10-09
-------------------------------------
VirtualBox 4.2.x compatibility release

Various regression bug fixes from beta versions

Moved to using VirtualBox's passive event listener mechanism, and
as a result:

PHP session support is now required

PHP minimum requirement is now at 5.2.0 (released in 2006)

-------------------------------------
	4.2-0b	2012-09-27
-------------------------------------
VirtualBox 4.2.x compatibility - beta release
NOT ALL VirtualBox 4.2 FEATURES ARE IMPLEMENTED!!
http://code.google.com/p/phpvirtualbox/issues/detail?id=585

Various regression bug fixes.

Fixed vboxinit script for users that have /bin/false or some other
invalid shell.

Updated languages.

Added advanced mode ("Hide Description") to wizards.

-------------------------------------
	4.2-0	2012-09-25
-------------------------------------
VirtualBox 4.2.x compatibility - beta release
NOT ALL VirtualBox 4.2 FEATURES ARE IMPLEMENTED!!
http://code.google.com/p/phpvirtualbox/issues/detail?id=585

Updated jquery to 1.8.2 and jquery-ui to 1.8.23

Corrected IE9 support.

Removed Firefox App Tab support.

-------------------------------------
	4.1-8	2012-08-20
-------------------------------------
Fixed bug that would error out when creating a VM without a boot
disk.
http://code.google.com/p/phpvirtualbox/issues/detail?id=482

Fixed bug that would cause the progress bar to hang when
performing progress operations in some cases.